Update Template, Fix Bug of WorkingPlan and others minor bug